--- a/myWebsite/style.css
+++ b/myWebsite/style.css
@@ -13,17 +13,16 @@ h1 {
 
 a {
     text-decoration: none;
-    color: rgb(174, 0, 255)
+    color: black
 }
 
 a:hover {
-    color: brown;
+    color: DeepSkyBlue;
 }
 
-/* set page bg color */
 body {
-    background-color: grey;
-    padding-left: 170px;
+    background-color: Silver;
+    padding-left: 130px;
     padding-right: 20px;
 }
 
@@ -37,9 +36,9 @@ h2 {
     position: fixed;
     top: 0px;
     left: 0px;
-    width: 150px;
+    width: 110px;
     height: 100%;
-    background-color: azure;
+    background-color: SteelBlue;
     padding: 5px;
     line-height: 1.5em;
     font-size: 1.2em;
