--- a/Booth/style.css
+++ b/Booth/style.css
@@ -6,7 +6,6 @@
 }
 
 html, body {
-    color-scheme: dark light;
     background: var(--body-bg);
     color: white;
     font-family: system-ui;
@@ -19,8 +18,7 @@ html, body {
     display: grid;
     grid-template-areas: 'overlap';
     place-content: center;
-    padding: 18px ;
-    font-size: 1.2em;
+    padding: 18px;
     text-transform: uppercase;
 }
 .logo>div {
@@ -58,6 +56,7 @@ div.logo-fg {
     margin: 0;
     padding-left: 50px;
     padding-right: 50px;
+    font-size: 1.3em;
     overflow: hidden;
     background-image: linear-gradient(to left top,#777275,#363636,#7AC3BF);
 }
@@ -76,20 +75,56 @@ div.logo-fg {
 }
 
 /* CSS for Main body / Section */
-.wrapper {
-    margin-inline: auto;
-    padding-inline: 1rem;
-}
-
-.section-title {
-    font-size: 2rem;
-}
-
 section {
-    margin-top: 5rem;
-    margin-left: 3rem;
-    margin-right: 3rem;
-    padding-block: 5rem;
+    margin-top: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    border-radius: 15px;
     background: grey;
-    height: 70%;
+    height: 100%;
+}
+
+.styled-table {
+    border-collapse: collapse;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 100%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 15px !important;
+    overflow: hidden !important;
+}
+.styled-table thead tr {
+    background-color: #7AC3BF;
+    border-bottom: 2px solid #dddddd;
+    color: black;
+    text-align: left;
+}
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+.styled-table tbody tr {
+    border-bottom: 2px solid #dddddd;
+    background-color: #4d4d4d;
+}
+.styled-table tbody tr:nth-child(even) {
+    background-color: grey;
+}
+.styled-table tbody tr:hover {
+    cursor: pointer;
+    background-color: #cccccc;
+}
+.styled-table tbody tr:focus {
+    border: none;
+    outline: 2px solid #333;
+    outline-offset: 2px;
+}
+.styled-table tr:last-child td:last-child {
+    border-bottom-right-radius:10px;
+}
+
+.styled-table tr:last-child td:first-child {
+    border-bottom-left-radius:10px;
 }
